Renewed Project Configuration
-Added log4j implementation in build.gradle
-Changed java version to jdk17
-Changed resource management